--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@angular/compiler-cli": "^20.3.0",
     "@eslint/js": "^9.36.0",
     "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
+    "@typescript-eslint/utils": "^8.45.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
