--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "format": "prettier --write .",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "lint:eslint": "eslint . --ext .ts,.html",
+    "lint:fix": "eslint . --ext .ts,.html --fix",
+    "format": "prettier --write \"**/*.{ts,js,html,scss,css,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,js,html,scss,css,json,md}\""
   },
   "prettier": {
     "printWidth": 100,
@@ -42,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@typescript-eslint/utils": "^8.45.0",
+    "angular-eslint": "^20.3.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
