--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "20.3.0",
     "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
